added characterization-project, src/main/deploy/[easy.wpilib.json,forward_and_back.wpilib.json,forward.wpilib.json, L_shape.wpilib.json,Slalom.wpilib.json,pathweaver.json] and updated .gitignore

--- a/Akriveia/.gitignore
+++ b/Akriveia/.gitignore
@@ -136,7 +136,8 @@ $RECYCLE.BIN/
 
 ### Gradle ###
 .gradle
-/build/
+/build/  
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -156,6 +157,20 @@ gradle-app.setting
 .settings/
 bin/
 imgui.ini
+
+## Characterization-project specific settings
+characterization-project/.gradle 
+characterization-project/.gradletasknamecache
+characterization-project/build
+characterization-project/.classpath
+characterization-project/.project
+characterization-project/.settings
+characterization-project/bin
+characterization-project/imgui.ini
+characterization-project/.vscode/*
+characterization-project/.gradle/buildOutputCleanup/buildOutputCleanup.lock
+
+
 
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
